/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    mavenCentral()
    flatDir {
        dirs "$rootProject.projectDir/ex-lib"
    }
/*
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
*/
}

group = 'com.lwohvye'
version = '4.0.0-SNAPSHOT'
java.sourceCompatibility = JavaVersion.VERSION_19

ext {
    ossrhUsername = System.getenv('OSSRH_USERNAME') ?: ossrhUsername ?: ''
    ossrhPassword = System.getenv('OSSRH_PASSWORD') ?: ossrhPassword ?: ''
}

java {
    withSourcesJar()
}

publishing {
    repositories {
        maven {
            name = "OSSRH"
            // change URLs to point to your repos, e.g. http://my.org/repo
            def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
            def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
            credentials {
                username = ossrhUsername
                password = ossrhPassword
            }
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += '--enable-preview'
}
